--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "ts-node src/index.ts --mode BYBIT",
+    "dev1": "ts-node --esm src/index.ts --mode=BYBIT",
     "build": "tsc -p .",
     "start": "node dist/index.js --mode"
   },
