--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "ts-node src/index.ts --mode BYBIT",
-    "dev1": "ts-node --esm src/index.ts --mode=BYBIT",
+    "dev1": "npx tsx src/index.ts --mode BYBIT",
     "build": "tsc -p .",
     "start": "node dist/index.js --mode"
   },
