--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "better-sqlite3": "11.9.1",
     "bitget-api": "^2.3.5",
+    "cron": "^4.3.0",
     "dotenv": "^16.5.0",
-    "node-cron": "^4.0.5",
+    "node-cron": "3.0.2",
     "playwright": "1.52.0",
     "playwright-extra": "4.3.6",
     "puppeteer-extra-plugin-stealth": "2.11.2",
