--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "ts-node src/index.ts --mode BYBIT",
-    "dev1": "npx tsx src/index.ts --mode BYBIT",
+    "dev": "ts-node src/index.ts --mode TRANSFORM",
+    "dev1": "npx tsx src/index.ts --mode TRANSFORM",
     "build": "tsc -p .",
     "start": "node dist/index.js --mode"
   },
@@ -26,6 +26,7 @@
     "typescript": "5.8.3"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "7.6.13"
+    "@types/better-sqlite3": "7.6.13",
+    "tsx": "^4.19.4"
   }
 }
