--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "ts-node src/index.ts --mode TRANSFORM",
-    "dev1": "npx tsx src/index.ts --mode TRANSFORM",
+    "dev": "ts-node src/index.ts --mode APP",
+    "dev1": "npx tsx src/index.ts --mode APP",
     "app": "npx tsx src/index.ts --mode APP",
     "build": "tsc -p .",
     "start": "node dist/index.js --mode"
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
     "better-sqlite3": "11.9.1",
     "bitget-api": "^2.3.5",
     "cron": "^4.3.0",
